CoolPics/coolpics.css
@import url("https://fonts.googleapis.com/css2?family=family=Mooli&display=swap");
 :root {
 --primary-color: #52489c;
 --secondary-color: #59c3c3;
 --accent-color: #f45b69;
 --text-dark: #333;
 --text-light: #ebebeb;
 --primary-font: Arial, Helvetica,sans-serif;
 --secondary-font: Mooli, sans-serif;
 }
 *{
    margin: 0;
    padding: 0;
 }
body{
    font-family: var(--primary-font);
    font-size: 1.2em;
    align-content: center;
    justify-content: center;
    margin: auto, 0;
    text-align: center;
    background-color: #f3f2f2;
}
h1, h2{
    font-family: var(--secondary-font);
    font-size: 2em;
}
.gallery figure {
    display: flex;
    justify-content: center;
    align-items: center;
}
header, footer{
    color: var(--text-light);
    background-color: var(--primary-color);
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    align-items: center;
}
button{
    color: var(--text-light);
}
nav >a {
    display: flex;
    flex-direction: column;
    color: var(--text-light);
}
.gallery{
    display: grid;
}
nav{
    display: flex;
    flex-direction: column;
    color: var(--text-light);
}
footer{
    text-align: left;
    padding-left: 10%;
}
a{
    text-decoration: underline;
    color: var(--text-light);
}
img{
    max-width: 100%;
    object-fit: cover;
    height: 250px;
    width: 250px;
    border-style: solid;
    border-color: black;
    border-radius: 1px;
    padding: 10px;
    background-color: white;
    box-shadow: 5px 5px gray;
}
button{
    background: none;
    border: none;
}
@media screen and (min-width: 700px)
{
.gallery{
    display: grid;
    grid-template-columns: 1fr 1fr;
}

}    
@media screen and (min-width: 1000px)
{
.gallery{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 1fr 1fr 1fr;
    gap: 16px;
    
}
.row1{
    grid-row: 1;
}
nav{
    display: flex;
    flex-direction: row;
    gap: 1rem;
}
}    

